--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- Página de bienvenida  -->  
   <div id="bienvenida">
     <h1>Usted ha sido registrado, bienvenida</h1>
-    <p id="datosResgistro"> </p>
+    <p id="datosRegistro"> </p>
     <button id="entrar">Entrar</button>
   </div>
   <!-- Vista de logueo-->
